--- a/LoginApp/Base.lproj/Main.storyboard
+++ b/LoginApp/Base.lproj/Main.storyboard
@@ -43,6 +43,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Log In"/>
                                 <connections>
+                                    <action selector="logInButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="IYg-Pv-uMw"/>
                                     <segue destination="EUj-LU-Z8E" kind="presentation" id="8ll-v3-XHK"/>
                                 </connections>
                             </button>
@@ -55,6 +56,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Forgot User Name?"/>
+                                <connections>
+                                    <action selector="forgotUserNameButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="mZ0-lm-oN9"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GW5-vb-KTz">
                                 <rect key="frame" x="199" y="353" width="105" height="31"/>
@@ -65,6 +69,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Forgot Password?"/>
+                                <connections>
+                                    <action selector="forgotPasswordPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="urL-2B-OfD"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -83,15 +90,19 @@
                             <constraint firstItem="uc9-WZ-WLi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="129" id="sPm-qA-sIC"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="passwordTF" destination="lkJ-D6-dAu" id="LV3-Rv-jHU"/>
+                        <outlet property="userNameTF" destination="TLv-RN-g4O" id="V5E-uK-SAg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="33.75" y="97.183098591549296"/>
         </scene>
-        <!--View Controller-->
+        <!--Welcome View Controller-->
         <scene sceneID="68b-Bj-zJy">
             <objects>
-                <viewController id="EUj-LU-Z8E" sceneMemberID="viewController">
+                <viewController id="EUj-LU-Z8E" customClass="WelcomeViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="r70-jz-H4k">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
