--- a/LoginApp/Base.lproj/Main.storyboard
+++ b/LoginApp/Base.lproj/Main.storyboard
@@ -111,20 +111,33 @@
                                 <rect key="frame" x="122" y="427" width="76" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Log Out"/>
+                                <connections>
+                                    <segue destination="EUu-Z2-QdC" kind="unwind" unwindAction="unwindSegue:" id="6Cf-W3-VkN"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, User!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ezP-6C-hZY">
+                                <rect key="frame" x="97" y="96" width="136" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fkK-4u-CF0"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.62" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fkK-4u-CF0" firstAttribute="trailing" secondItem="Gov-La-dj4" secondAttribute="trailing" constant="122" id="7b9-iN-8KC"/>
                             <constraint firstItem="Gov-La-dj4" firstAttribute="leading" secondItem="fkK-4u-CF0" secondAttribute="leading" constant="122" id="9oa-9C-eNe"/>
+                            <constraint firstItem="ezP-6C-hZY" firstAttribute="leading" secondItem="fkK-4u-CF0" secondAttribute="leading" constant="97" id="Qna-Vm-mL8"/>
+                            <constraint firstItem="fkK-4u-CF0" firstAttribute="trailing" secondItem="ezP-6C-hZY" secondAttribute="trailing" constant="87" id="QpS-mz-XFD"/>
                             <constraint firstItem="fkK-4u-CF0" firstAttribute="bottom" secondItem="Gov-La-dj4" secondAttribute="bottom" constant="90" id="dBi-Ca-ZBF"/>
+                            <constraint firstItem="ezP-6C-hZY" firstAttribute="top" secondItem="fkK-4u-CF0" secondAttribute="top" constant="96" id="u5a-3a-N92"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J8r-IK-atR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="EUu-Z2-QdC" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="866" y="97"/>
+            <point key="canvasLocation" x="864.375" y="96.126760563380287"/>
         </scene>
     </scenes>
     <resources>
