--- a/LoginApp/Base.lproj/Main.storyboard
+++ b/LoginApp/Base.lproj/Main.storyboard
@@ -30,16 +30,9 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="260" id="tND-4Q-YOG"/>
-                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uc9-WZ-WLi">
                                 <rect key="frame" x="129" y="301" width="64" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="31" id="O8U-8m-zgE"/>
-                                    <constraint firstAttribute="width" constant="64" id="pH1-2M-zbG"/>
-                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Log In"/>
                                 <connections>
@@ -47,30 +40,22 @@
                                     <segue destination="EUj-LU-Z8E" kind="presentation" id="8ll-v3-XHK"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijK-IT-DmB">
-                                <rect key="frame" x="12" y="353" width="105" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="31" id="BIL-VR-MNM"/>
-                                    <constraint firstAttribute="width" constant="105" id="JhB-hr-3C8"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Forgot User Name?"/>
-                                <connections>
-                                    <action selector="forgotUserNameButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="mZ0-lm-oN9"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GW5-vb-KTz">
-                                <rect key="frame" x="199" y="353" width="105" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="31" id="7YM-js-52u"/>
-                                    <constraint firstAttribute="width" constant="105" id="KUO-Rp-iGc"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GW5-vb-KTz">
+                                <rect key="frame" x="211" y="361" width="79" height="23"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Forgot Password?"/>
                                 <connections>
                                     <action selector="forgotPasswordPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="urL-2B-OfD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijK-IT-DmB">
+                                <rect key="frame" x="30" y="361" width="85" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Forgot User Name?"/>
+                                <connections>
+                                    <action selector="forgotUserNameButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="mZ0-lm-oN9"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -79,15 +64,15 @@
                         <constraints>
                             <constraint firstItem="bAH-Uh-61V" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="2xf-xh-pge"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uc9-WZ-WLi" secondAttribute="bottom" constant="236" id="3Kb-Th-0lF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ijK-IT-DmB" secondAttribute="bottom" constant="184" id="8E1-pW-vjg"/>
+                            <constraint firstItem="GW5-vb-KTz" firstAttribute="trailing" secondItem="bAH-Uh-61V" secondAttribute="trailing" id="A2u-72-t15"/>
                             <constraint firstItem="bAH-Uh-61V" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="174" id="AbE-p6-zCe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bAH-Uh-61V" secondAttribute="trailing" constant="30" id="IpN-31-YNb"/>
-                            <constraint firstItem="GW5-vb-KTz" firstAttribute="leading" secondItem="ijK-IT-DmB" secondAttribute="trailing" constant="82" id="XbM-4z-ueW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="GW5-vb-KTz" secondAttribute="bottom" constant="184" id="bdj-hH-yPv"/>
-                            <constraint firstItem="ijK-IT-DmB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="eyU-bD-3T4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ijK-IT-DmB" secondAttribute="bottom" constant="184" id="fRg-im-jko"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GW5-vb-KTz" secondAttribute="trailing" constant="16" id="hNp-uV-4Gz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uc9-WZ-WLi" secondAttribute="trailing" constant="127" id="kKD-vh-yIR"/>
+                            <constraint firstItem="ijK-IT-DmB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="moM-uE-q6z"/>
                             <constraint firstItem="uc9-WZ-WLi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="129" id="sPm-qA-sIC"/>
+                            <constraint firstItem="GW5-vb-KTz" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ijK-IT-DmB" secondAttribute="trailing" constant="8" symbolic="YES" id="si1-wK-4DS"/>
+                            <constraint firstItem="GW5-vb-KTz" firstAttribute="baseline" secondItem="ijK-IT-DmB" secondAttribute="baseline" id="xe4-UA-TPM"/>
                         </constraints>
                     </view>
                     <connections>
